--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,6 @@
 <footer class="info">
-    <p>Doble click para editar un TODO</p>
     <!-- Remove the below line ↓ -->
-    <p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+    <p><img src="../../assets/images/logo_without_text.png"> Task Chrono - v. {{ version }} - 2023</p>
     <!-- Change this out with your name and url ↓ -->
-    <p>Created by <a href="http://todomvc.com">you</a></p>
-    <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+    <p>Created by Bitproservices</p>
 </footer>
