--- a/src/app/todos/todo-footer/todo-footer.component.html
+++ b/src/app/todos/todo-footer/todo-footer.component.html
@@ -19,3 +19,5 @@
     <button class="clear-completed"
           (click)="limpiarCompletados()">Limpiar completados</button>
 </footer>
+
+<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon>
